--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "convert-units": "^2.3.4",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-flexbox-grid": "^2.1.2",
+    "react-redux": "^7.2.0",
     "react-scripts": "2.1.8",
-    "react-weathericons": "^1.0.4"
+    "react-weathericons": "^1.0.4",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
