--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-redux": "^7.2.0",
     "react-scripts": "2.1.8",
     "react-weathericons": "^1.0.4",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
